<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Федор" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginEnd="4dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/personSurnameTV"
        app:layout_constraintEnd_toStartOf="@+id/personAgeTV"
        app:layout_constraintTop_toTopOf="@+id/personNameTV" />

    <TextView
        android:id="@+id/personAgeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/personNameTV"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/personNameTV"
        tools:text="34" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/surname"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/personNameTV" />

    <TextView
        android:id="@+id/personSurnameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/personNameTV"
        tools:text="Петров" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="12sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/personSurnameTV"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/personNameTV" />

    <TextView
        android:id="@+id/personRoleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textAlignment="inherit"
        app:layout_constraintBottom_toBottomOf="@+id/personSurnameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/personNameTV"
        tools:text="Программист" />

</androidx.constraintlayout.widget.ConstraintLayout>